# You must change these to your own details.
[package]
name = "client"
description = "This is a client test"
version = "0.1.0"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"
js-sys = "0.3"
bincode = "1.3"
serde_json = "1.0"
html-escape = "0.2"
itertools = "0.10"
specs = { version = "0.17.0", default-features = false, features = ["shred-derive"] }
enum_dispatch = "0.3"
common = { path = "../common" }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "WebSocket",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "MessageEvent",
    "ProgressEvent",
    "MouseEvent",
    "FileReader",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "EventTarget",
    "HtmlInputElement",
    "SvgElement",
    "SvgGraphicsElement",
    "SvgsvgElement",
    "SvgMatrix",
    "SvgRect",
    "DomParser",
    "SupportedType",
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures_old = { version = "0.1.27", package = "futures" }
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
