[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.29", features = ["serde-serialize"] }
itertools = "0.10"
fnv = "1.0"
enum_dispatch = "0.3"
serde = { version = "1.0", features = ["derive"] }
getset = "0.1"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
rand_pcg = "0.3"
rand_core = "0.6"
bincode = "1.3"
log = "0.4"

[dev-dependencies]
