[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-std = "1.10.0"
async-tungstenite = { version = "0.16.0", features = ["async-std-runtime"] }
futures = "0.3.17"
log = "0.4"
env_logger = "0.9.0"
bincode = "1.3"
fnv = "1.0"
getset = "0.1"
itertools = "0.10"